--- a/public/css/signup-in.css
+++ b/public/css/signup-in.css
@@ -1,7 +1,11 @@
 .login {
     min-height: 100vh;
   }
-  
+
+  #pills-logins{
+    margin-top: 4rem;   
+}
+
   .bg-image {
     background-image: url("/public/img/image.jpg");
     background-size: cover;
